@@ -759,7 +759,7 @@ public class DataQueryParams {
 
   /** Returns the filter periods as period objects. */
   public List<Period> getTypedFilterPeriods() {
-    return getFilterPeriods().stream().map(Period.class::cast).collect(Collectors.toList());
+    return getFilterPeriods().stream().map(Period.class::cast).toList();
   }
 
   /** Returns a list of dimensions which occur more than once, not including the first duplicate. */
